--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,6 +2,6 @@
   Layout = "_Layout";
 }
 
-<h1>Welcome to the Best Restaurants website!</h1>
-<p>@Html.ActionLink("See all Restaurants", "Index", "Restaurants")</p>
-<p>@Html.ActionLink("See all Cuisines", "Index", "Cuisines")</p>
+<h1>Welcome to the Best Stylists website!</h1>
+<p>@Html.ActionLink("See all Stylists", "Index", "Stylists")</p>
+<p>@Html.ActionLink("See all Clients", "Index", "Clients")</p>
