--- a/Views/Clients/Delete.cshtml
+++ b/Views/Clients/Delete.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model BestRestaurants.Models.Cuisine
+@model BestStylists.Models.Client
 
 <h2>Are you sure you want to delete this?</h2>
 
