--- a/Views/Clients/Edit.cshtml
+++ b/Views/Clients/Edit.cshtml
@@ -2,21 +2,21 @@
   Layout = "_Layout";
 }
 
-@model BestRestaurants.Models.Cuisine
+@model BestStylists.Models.Client
 
 <h2>Edit</h2>
 
-<h4>Edit this cuisine: @Html.DisplayFor(model => model.Description)</h4>
+<h4>Edit this client: @Html.DisplayFor(model => model.Description)</h4>
 
 @using (Html.BeginForm())
 {
-    @Html.HiddenFor(model => model.CuisineId)
+    @Html.HiddenFor(model => model.ClientId)
 
     @Html.LabelFor(model => model.Description)
     @Html.EditorFor(model => model.Description)
 
-    @Html.LabelFor(model => model.Restaurant)
-    @Html.DropDownList("RestaurantId")
+    @Html.LabelFor(model => model.Stylist)
+    @Html.DropDownList("StylistId")
 
     <input type="submit" value="Save" />
 }
