--- a/Views/Stylists/Delete.cshtml
+++ b/Views/Stylists/Delete.cshtml
@@ -2,7 +2,7 @@
   Layout = "_Layout";
 }
 
-@model BestRestaurants.Models.Restaurant
+@model BestStylists.Models.Stylist
 
 <h2>Are you sure you want to delete this?</h2>
 
@@ -11,4 +11,4 @@
 {
     <input type="submit" value="Delete" />
 }
-@Html.ActionLink("Back to restaurants", "Index")
+@Html.ActionLink("Back to stylists", "Index")
