--- a/Views/Stylists/Details.cshtml
+++ b/Views/Stylists/Details.cshtml
@@ -17,7 +17,7 @@
 
 @foreach (Client client in @Model.Clients)
 {
-  <li>Description: @client.Description</li>
+  <li>Clients: @client.Description</li>
 }
 </ul>
 
