--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,6 +2,10 @@
   Layout = "_Layout";
 }
 
-<h1>Welcome to the Best Stylists website!</h1>
+<div class = "jumbotron">
+<h1>Eau Claire's Salon</h1>
+</div>
+<div class = "changer">
 <p>@Html.ActionLink("See all Stylists", "Index", "Stylists")</p>
 <p>@Html.ActionLink("See all Clients", "Index", "Clients")</p>
+</div>
