--- a/Views/Stylists/Index.cshtml
+++ b/Views/Stylists/Index.cshtml
@@ -17,6 +17,11 @@
   <li>@Html.ActionLink($"{stylist.Name}", "Details", new { id = stylist.StylistId })</li>
 }
 
+@if (@Model.Count>0)
+{
+  <p>@Html.ActionLink("See all Clients", "Index", "Clients")</p>
+}
+
 <p>@Html.ActionLink("Add new stylist", "Create")</p>
 
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
