--- a/Views/Clients/Create.cshtml
+++ b/Views/Clients/Create.cshtml
@@ -14,6 +14,6 @@
     @Html.LabelFor(model => model.Stylist)
     @Html.DropDownList("StylistId")
 
-    <input type="submit" value="Add new client" class="btn btn-info" />
+    <input type="submit" value="Add new client" class="btn btn-success" />
 }
 <p>@Html.ActionLink("Show all clients", "Index")</p>
