--- a/Views/Clients/Index.cshtml
+++ b/Views/Clients/Index.cshtml
@@ -5,7 +5,7 @@
 @using BestStylists.Models;
 @model List<BestStylists.Models.Client>;
 
-<h1>Clients</h1>
+<h1 class = "jumbotron">Clients</h1>
 
 @if (@Model.Count == 0)
 {
