--- a/Views/Stylists/Create.cshtml
+++ b/Views/Stylists/Create.cshtml
@@ -9,6 +9,6 @@
 {
     @Html.LabelFor(model => model.Name)
     @Html.TextBoxFor(model => model.Name)
-    <input type="submit" value="Add new stylist" />
+    <input type="submit" value="Add new stylist" class = "btn btn-success"/>
 }
-<p>@Html.ActionLink("Show all stylist", "Index")</p>
+<p>@Html.ActionLink("Show all Stylists", "Index")</p>
