--- a/Views/Stylists/Details.cshtml
+++ b/Views/Stylists/Details.cshtml
@@ -21,6 +21,6 @@
 }
 </ul>
 
-<p>@Html.ActionLink("Back to stylists", "Index")</p>
+<p>@Html.ActionLink("Back to Stylists", "Index")</p>
 <p>@Html.ActionLink("Edit Stylist", "Edit", new { id = Model.StylistId })</p>
 <p>@Html.ActionLink("Delete Stylist", "Delete", new { id = Model.StylistId })</p>
