--- a/Views/Stylists/Index.cshtml
+++ b/Views/Stylists/Index.cshtml
@@ -5,7 +5,7 @@
 @using BestStylists.Models;
 @model List<BestStylists.Models.Stylist>;
 
-<h1>Stylists</h1>
+<h1 class = "jumbotron">Stylists</h1>
 
 @if (@Model.Count == 0)
 {
@@ -16,12 +16,13 @@
 {
   <li>@Html.ActionLink($"{stylist.Name}", "Details", new { id = stylist.StylistId })</li>
 }
+<br>
 
 @if (@Model.Count>0)
 {
   <p>@Html.ActionLink("See all Clients", "Index", "Clients")</p>
 }
 
-<p>@Html.ActionLink("Add new stylist", "Create")</p>
+<p>@Html.ActionLink("Add new Stylist", "Create")</p>
 
 <p>@Html.ActionLink("Home", "Index", "Home")</p>
