Change styling, add a footer

--- a/wwwroot/css/styles.css
+++ b/wwwroot/css/styles.css
@@ -2,6 +2,15 @@ body {
   margin: 0 auto;
   max-width: 1200px;
   text-align: center;
-  background-color: lightgray;
+  background-color: rgba(5, 88, 5, 0.164);
   color: darkgreen;
+}
+div#footer {
+  position:fixed;
+  bottom:0px;
+  left:0px;
+  width:100%;
+  color:#CCC;
+  background:#333;
+  padding:8px;
 }
